changed maptime to https; /\

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,11 @@
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag 'application'%>
   <%= csrf_meta_tags %>
-    <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-  <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
+ <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/themes/css/cartodb.css">
+   <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/cartodb.js"></script>
+
 
 </head>
 
