--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,6 +1,9 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.cartodb-header .content .title {
+  padding-left: 20px;
+}
 .map {
   margin-top: 50px;
 }
@@ -37,7 +40,6 @@ h1 {
   text-align: center;
   font-family: 'Bebas';
   font-size: 25px;
-  margin: 0 10px 40px 10px;
   padding: 10px;
   a.categories {
     padding: 7px 20px 0 29px;
