--- a/app/assets/stylesheets/base/_buttons.scss
+++ b/app/assets/stylesheets/base/_buttons.scss
@@ -1,5 +1,4 @@
-button,
-input[type="submit"] {
+button, input[type="submit"] {
   @extend %button;
   @include appearance(none);
   border: none;
@@ -7,4 +6,5 @@ input[type="submit"] {
   user-select: none;
   vertical-align: middle;
   white-space: nowrap;
+  margin-left: 0px;
 }
