--- a/app/views/users/contact.html.erb
+++ b/app/views/users/contact.html.erb
@@ -1,23 +1,21 @@
 
-<div class="side-image">
-  <div class="images-wrapper4"></div>
-    <div class="content">
-   <div class='title'>Contact Us</div>
-   <form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
-	<div class="row">
-		<label for="name">Your name:</label><br />
-		<input id="name" class="input" name="name" type="text" value="" size="30" /><br />
-	</div>
-	<div class="row">
-		<label for="email">Your email:</label><br />
-		<input id="email" class="input" name="email" type="text" value="" size="30" /><br />
-	</div>
-	<div class="row">
-		<label for="message">Your message:</label><br />
-		<textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
-	</div>
-	<input id="submit_button" type="submit" value="Send email" />
-</form>	
+<div class="about-background">
+	<%=image_tag('pirate.png')%>
 
-  </div>
+	<div class='content-wrapper'>
+		<div class="content">
+
+			<div class='title'>Contact Us</div>
+		<br>
+	
+		Maybe you have a suggestion for some data you want us to add or maybe you're interested in getting involved with Map Time. Let us know!
+		</p>
+			<p> Contact us with your ideas, thoughts or complaints. </p>
+			<p> <form action="MAILTO:eckotzer@gmail.com?subject=Maptime Message" method="post" enctype="text/plain">
+				<input type="submit" value="Email Us">
+			</form>
+		</p>
+	</div>
 </div>
+</div>
+
