--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,13 +25,13 @@
   </div>
 
 </div>
-
+<div class='map-wrapper'>
 <div class='map' id="map_edu"></div>
 <div class='map' id="map_pop"></div>
 <div class='map' id="map_shelter"></div>
 <div class='map' id="map_trans"></div>
 <div class='map' id="map_inc"></div>
-
+</div>
 
 <div class='graphPage'>
 <h1> Regression Analysis </h1><br>
