--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -7,7 +7,7 @@
      <div class='title'>About Map Time</div>
      <p> Map Time is an interactive data mapping tool that allows you to create visual representation of demographic data as well as download that data in full. 
        <br><br>
-       Currently Map Time is soley focused on census tract data for the GTA. We plan to extend this tool for all of Canada. 
+       Currently Map Time is solely focused on census tract data for the GTA. We plan to extend this tool for all of Canada. 
        <br><br>
        Census tracts (CTs) are small, relatively stable geographic areas that usually have a population between 2,500 and 8,000 persons. They are located in census metropolitan areas and in census agglomerations that had a core population of 50,000 or more in the previous census.
        <br><br>
