--- a/app/views/users/contact.html.erb
+++ b/app/views/users/contact.html.erb
@@ -5,7 +5,7 @@
 	<div class='content-wrapper'>
 		<div class="content">
 
-			<div class='title'>Contact Us</div>
+			<div class='title'>Contact &nbsp; Us</div>
 		<br>
 	
 		Maybe you have a suggestion for some data you want us to add or maybe you're interested in getting involved with Map Time. Let us know!
