--- a/app/views/users/download.html.erb
+++ b/app/views/users/download.html.erb
@@ -1,15 +1,15 @@
 
 
 <div class="about-background">
-	<%=image_tag('mapbackground.png')%>
+	<!-- 	<%=image_tag('mapbackground.png')%> -->
 
 	<div class='content-wrapper'>
 		<div class="content">
-			<div class='title'>Download the Data</div>
+			<div class='title'>Download &nbsp; the&nbsp;  Data</div>
 			<br>
-			<div>
-				<%= link_to users_download_csv_url %>
-				<%= link_to users_download_geojson_url %>
+			<div class='download-links'>
+				<%= link_to "Download as CSV", "/data_files/torontoCT2011.csv.zip"%><br>
+				<%= link_to "Download as GeoJSON", "/data_files/torontoCT2011.geojson.zip"%>
 			</div>
 		</div>
 	</div>
