--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,17 +23,17 @@
       <a href="" class="centered-navigation-menu-button">MENU</a>
       <ul class="centered-navigation-menu" style="
       padding-top: 10px;">
+      <li class="nav-link logo">
+          <%= link_to "Map Time", users_path, { 'data-no-turbolink' => true } %> 
+        </li>
         <li class="nav-link">
          <%= link_to "About", about_path %>
         </li>
         <li class="nav-link">
           <%= link_to "Contact Us", contact_path %>
         </li>
-        <li class="nav-link logo">
-          <%= link_to "Map Time", users_path, { 'data-no-turbolink' => true } %> 
-        </li>
         <li class="nav-link">
-           <%= link_to "Data", downloadpage_path %>
+           <%= link_to "Data", download_path %>
         </li>
       </ul>
     </div>
