--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -152,7 +152,7 @@ h1 {
       // color: $accordion-menu-color;
       padding: $accordion-menu-list-padding;
       display: block;
-      font-family: 'hipsterscriptpro';
+      font-family: 'bebas';
       color: #133d71;
       text-align: center;
       font-size: 27px;
@@ -634,7 +634,7 @@ body {
   //   margin-bottom: -$centered-navigation-logo-height / 3;
   //   max-height: $centered-navigation-logo-height;
   //   opacity: .6;
-  //   font-family: hipsterscriptpro;
+  //   font-family: bebas;
   // }
   // Sub menus
   li.more.nav-link {
