lower case b for bebas

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -86,7 +86,7 @@ h1 {
   margin-left: 0px;
   margin-right: 0px;
   height: 57px;
-  font-family: 'Bebas';
+  font-family: 'bebas';
   font-size: 25px;
   padding: 10px;
   a.categories {
