--- a/app/views/users/contact.html.erb
+++ b/app/views/users/contact.html.erb
@@ -13,6 +13,7 @@
 			<p> Contact us with your ideas, thoughts or complaints. </p>
 			<p> <form action="MAILTO:eckotzer@gmail.com?subject=Maptime Message" method="post" enctype="text/plain">
 				<input type="submit" value="Email Us">
+				<%= link_to image_tag('twitter.png', class: 'social', title: "Twitter"), src="https://twitter.com/callunity" %>
 			</form>
 		</p>
 	</div>
