saving fonts everywhere

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -4,11 +4,11 @@
 
 @font-face{ 
   font-family: 'bebas1';
-  src: url('bebas-webfont.eot');
-  src: url('bebas-webfont.eot?iefix') format('eot'),
-       url('bebas-webfont.woff') format('woff'),
-       url('bebas-webfont.ttf') format('truetype'),
-       url('bebas-webfont.svg#webfont') format('svg');
+  src: url('/fonts/bebas-webfont.eot');
+  src: url('/fonts/bebas-webfont.eot?iefix') format('eot'),
+       url('/fonts/bebas-webfont.woff') format('woff'),
+       url('/fonts/bebas-webfont.ttf') format('truetype'),
+       url('/fonts/bebas-webfont.svg#webfont') format('svg');
 }
 
 .download-links{
