changing header from class

--- a/app/views/users/download.html.erb
+++ b/app/views/users/download.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="about-background">
-	<!-- 	<%=image_tag('mapbackground.png')%> -->
+<%=image_tag('mapbackground.png')%> 
 
 	<div class='content-wrapper'>
 		<div class="content">
