--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -91,7 +91,7 @@ h1 {
   margin-top: 20px;
   margin-left: 15%;
 }
-header {
+.heading {
   background-color: white;
   margin-left: 0px;
   margin-right: 0px;
