--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-  <header class="centered-navigation">
+  <div class="centered-navigation">
     <div class="centered-navigation-wrapper">
       <a href="" class="centered-navigation-menu-button">MENU</a>
       <ul class="centered-navigation-menu" style="
@@ -17,7 +17,7 @@
         </li>
       </ul>
     </div>
-    </header>
+    </div>
 
 <div class='heading'>
 
