--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -521,7 +521,7 @@ body {
     cursor: crosshair;
     display: none;
 }
-.before {} .after {} .centered-navigation {
+.centered-navigation {
     $centered-navigation-padding: 1em;
     $centered-navigation-logo-height: 2em;
     $centered-navigation-background: black;
