final header fix?

--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -4,7 +4,7 @@
 
   <div class='content-wrapper'>
     <div class="content">
-     <div class='title'>About Map Time</div>
+     <div class='title'>About &nbsp;&nbsp;Map &nbsp;&nbsp;Time</div>
      <p> Map Time is an interactive data mapping tool that allows you to create visual representation of demographic data as well as download that data in full. 
        <br><br>
        Currently Map Time is solely focused on census tract data for the GTA. We plan to extend this tool for all of Canada. 
