--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,30 @@
 </head>
 
 <body>
-
+  <div class="navigation">
+    <div class="navigation-wrapper">
+      <a href="" class="navigation-menu-button">MENU</a>
+      <ul class="navigation-menu" style="
+      padding-top: 10px;">
+      <li class="nav-link logo">
+          <%= link_to "Map Time", users_path, { 'data-no-turbolink' => true } %> 
+        </li>
+        <li class="nav-link">
+         <%= link_to "About", about_path %>
+        </li>
+        <li class="nav-link">
+          <%= link_to "Contact  Us", contact_path %>
+        </li>
+        <li class="nav-link">
+           <%= link_to "Data", download_path %>
+        </li>
+      </ul>
+    </div>
+    </div>
 
     <div>
-      <p id="notice"><%= flash[:notice] %></p>
-      <p id="alert"><%= flash[:alert] %></p>
+      <div id="notice"><%= flash[:notice] %></div>
+      <div id="alert"><%= flash[:alert] %></div>
     </div>
 
 
