--- a/app/views/users/contact.html.erb
+++ b/app/views/users/contact.html.erb
@@ -6,17 +6,20 @@
 		<div class="content">
 
 			<div class='title'>Contact &nbsp; Us</div>
-		<br>
-	
-		Maybe you have a suggestion for some data you want us to add or maybe you're interested in getting involved with Map Time. Let us know!
-		</p>
+			<br>
+			<p>Maybe you have a suggestion for some data you want us to add or maybe you're interested in getting involved with Map Time. Let us know!</p>
+
 			<p> Contact us with your ideas, thoughts or complaints. </p>
-			<p> <form action="MAILTO:eckotzer@gmail.com?subject=Maptime Message" method="post" enctype="text/plain">
+		
+			<div class='contact'>
+				<form action="MAILTO:eckotzer@gmail.com?subject=Maptime Message" method="post" enctype="text/plain">
 				<input type="submit" value="Email Us">
-				<%= link_to image_tag('twitter.png', class: 'social', title: "Twitter"), src="https://twitter.com/callunity" %>
-			</form>
-		</p>
+				</form>
+				<div class='social'>
+					<%= link_to image_tag('twitter.png', title: "Twitter"), src="https://twitter.com/callunity" %>
+				</div>
+			</div>
+		</div>
 	</div>
-</div>
 </div>
 
