--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 
 
+
 <div class='heading'>
 
   <div class='function-menu'>
@@ -27,6 +28,11 @@
   </div>
 
 </div>
+
+<div class='globe'>
+<%=image_tag('globe1.gif')%>
+</div>
+
 <div class='map-wrapper'>
 <div class='map' id="map_edu"></div>
 <div class='map' id="map_pop"></div>
