--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -2,6 +2,7 @@
 
 body {
   -webkit-font-smoothing: antialiased;
+  background-color: #d1e4e7;
   color: $base-font-color;
   font-family: $base-font-family;
   font-size: $base-font-size;
